# dex_testapp_profiles

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native_protector.cpp
app/src/main/java/com/test/profiletest/: MainActivity.java  NativeProtector.java
app/src/main/res/layout/: activity_main.xml
